# Scaler-Round-2

./: .gitattributes  .gitignore  Dockerfile  README.md  app.py  baseline_results.json  blog.md  dep_upgrade_env.py  easy.py  env.py  evaluate.py  finetune_llm.py  generate_expert_data.py  gym_wrapper.py  hard.py  inference.py  medium.py  models.py  openenv.yaml  package-lock.json  pyproject.toml  requirements.txt  start.sh  train.py  train_full_pipeline.py  train_grpo.py  validate.py
.claude/: settings.local.json
.github/workflows/: sync_to_hf.yml
env/: environment.py  events.py  models.py
expert_data/: expert_eval.jsonl
server/: app.py
tasks/: easy.py  graders.py  hard.py  medium.py
tb_logs/task_medium/PPO_1/: events.out.tfevents.1777114314.PUSHKAR.49596.0
tb_logs/task_medium/PPO_2/: events.out.tfevents.1777123822.PUSHKAR.17436.0
tb_logs/task_medium/PPO_3/: events.out.tfevents.1777177972.SES.45540.0
tb_logs/task_medium/PPO_4/: events.out.tfevents.1777178033.SES.3968.0
tests/: test_environment.py
